syntax = "proto3";

option go_package = "dconsole-editor/raft";

package raft;

service Raft {
  rpc AppendEntries(stream AppendEntryRequest)
      returns (stream AppendEntryReply) {}
  rpc RequestVote(VoteRequest) returns (VoteReply) {}
}

message VoteRequest {
  int32 term = 1;
  int32 candidate_id = 2;
  int32 last_log_entry = 3;
  int32 last_idx_entry = 4;
}

message VoteReply {
  int32 term = 1;
  bool ok = 2;
}

message AppendEntryRequest {
  int32 term = 1;
  int32 idx = 2;
  int32 leader_id = 3;
  int32 prev_log_idx = 4;
  int32 prev_log_term = 5;
  repeated Cmd cmd = 6;
  int32 leader_commit = 7;
}
message AppendEntryReply {
  int32 term = 1;
  bool ok = 2;
}

message Cmd {
  sint32 n = 1;
  string s = 2;
}
